MYVE-298:refactor/review - 스웨거 작업 및 리뷰 서비스 CRUD 분리 (#689)
* MYVE-298:refactor/review - 스웨거 작업 및 리뷰 서비스 CRUD 분리 (#688)

* MYCE-79: 리뷰 관련 코드 임시 저장

* Fix test failures and SSL configuration

- Add missing containsString import to test classes
- Fix toBuilder configuration in ReviewCreateRequest
- Add application-test.properties for test environment
- Resolve 27 failing tests

* Fix test failures and SSL configuration

- Add missing containsString import to test classes
- Fix toBuilder configuration in ReviewCreateRequest
- Add application-test.properties for test environment
- Resolve 27 failing tests

* Fix test failures and SSL configuration

- Add missing containsString import to test classes
- Fix toBuilder configuration in ReviewCreateRequest
- Add application-test.properties for test environment
- Resolve 27 failing tests

* Fix test failures and SSL configuration

- Add missing containsString import to test classes
- Fix toBuilder configuration in ReviewCreateRequest
- Add application-test.properties for test environment
- Resolve 27 failing tests

* MYCE-79: 리뷰 관련 코드 임시 저장

* Fix test failures and SSL configuration

- Add missing containsString import to test classes
- Fix toBuilder configuration in ReviewCreateRequest
- Add application-test.properties for test environment
- Resolve 27 failing tests

* Fix test failures and SSL configuration

- Add missing containsString import to test classes
- Fix toBuilder configuration in ReviewCreateRequest
- Add application-test.properties for test environment
- Resolve 27 failing tests

* Fix test failures and SSL configuration

- Add missing containsString import to test classes
- Fix toBuilder configuration in ReviewCreateRequest
- Add application-test.properties for test environment
- Resolve 27 failing tests

* Fix test failures and SSL configuration

- Add missing containsString import to test classes
- Fix toBuilder configuration in ReviewCreateRequest
- Add application-test.properties for test environment
- Resol